# rlvr-language

./: .env.example  .gitignore  INSTALLATION.md  README.md  START_SERVER.sh  main.js  manifest.json  package.json  prd.md  test-instructions.md
backend/: Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  simple_app.py
backend/routers/: __init__.py  health.py  transcript.py
backend/services/: __init__.py  hawaiian_service.py  transcript_service.py
backend/tests/: __init__.py  test_hawaiian_service.py  test_transcript_service.py
docs/changelogs/: 2025-08-10-task-1-implement-rlvr-framework.md
rlvr/: .gitignore  GETTING_STARTED.md  README.md  package.json  pyproject.toml  requirements.txt  run.sh  run_conda.sh  test_rlvr.py
rlvr-demo/: README.md  package-lock.json  package.json
rlvr/lang/en/: article_exceptions.txt  common_misspellings.json  en.yaml  irregular_verbs.json
rlvr/lang/haw/: haw.yaml  ke_exceptions.txt  lex_diacritics.txt  regex_tam.json
rlvr/rlvr/: __init__.py
rlvr/rlvr/audit/: __init__.py  logger.py
rlvr/rlvr/generator/: __init__.py  base.py  bidirectional.py  llm_openai.py  mock.py
rlvr/rlvr/gym/: __init__.py  run.py
rlvr/rlvr/metrics/: __init__.py  articles_ke_ka.py  base.py  diacritics.py  english_articles.py  english_punctuation.py  english_spelling.py  english_subject_verb.py  tam_particles.py
rlvr/rlvr/optimizer/: __init__.py  bandit.py
rlvr/rlvr/server/: __init__.py  api.py
rlvr/rlvr/utils/: __init__.py  normalize.py  scoring.py  tokenize.py
src/: styles.css
(+15 files in other folders)
