[tool.poetry]
name = "rlvr"
version = "0.1.0"
description = "Reinforcement Learning with Verifiable Rewards for Language Learning"
authors = ["RLVR Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pyyaml = "^6.0"
pydantic = "^2.0"
numpy = "^1.24.0"
openai = "^1.0.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 